# allyoucanuse

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: todo.md
src/allyoucanuse/: __init__.py
src/allyoucanuse/df/: __init__.py  test.py
src/allyoucanuse/etc/: calendar.py  hashing.py
src/allyoucanuse/io/: file_io.py  tickets.jsonl
src/allyoucanuse/logging/: __init__.py
src/allyoucanuse/plot/: __init__.py
src/allyoucanuse/text_processing/: __init__.py
testProject/: pyproject.toml  test.py
